--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
 baseURL: https://foothillsoverheaddoors.com/
 languageCode: en-us
-title: Foothills Overhead Doors
+title: Foothills Overhead Doors.
+timeout: 180000
 module:
   imports:
   - path: github.com/future-wd/hugo-responsive-images
